<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="calories">Calories</string>
    <string name="syncing_heartrate_data">Syncing heart rate...</string>
    <string name="update_version_ok">Update</string>
    <string name="remove_from_google_fit">Remove From Google Fit</string>
    <string name="Added">Added</string>
    <string name="add_google_fit">Add Google Fit</string>
    <string name="google_fit">Google Fit</string>
    <string name="add_accounts">Add accounts</string>
    <string name="sync_data_to_third">Sync data with Google Fit</string>
    <string name="update_version_loast">It\'s the latest version!</string>
    <string name="deep_sleep">Deep</string>
    <string name="light_sleep">Light</string>
    <string name="elight_sleep">Very Light</string>
    <string name="awake">Awake</string>
    <string name="not_support_camera">Your device not supprot camare!</string>
    <string name="not_select_album">Can not select image from album!</string>
    <string name="current_device_type">Current device type is : %1$s</string>
    <string name="choose_devicetype">Selected Device Type</string>
    <string name="choose_devicetype_first">Selected Device Type First!</string>
    <string name="current_devicetype_selecte">The device type that you selected is %1$s</string>
    <string name="switch_devicetype">Switch device type</string>
    <string name="please_unbind">Please unpair with device first!</string>
    <string name="connect_or_open_heartTest">Please connect or open heart rate detection first!</string>
    <string name="delete">Delete</string>
    <string name="format_footinch">%1$s</string>
    <string name="format_inch">%1$s″</string>
    <string name="format_cm">%1$scm</string>
    <string name="format_age">%1$sYrs</string>
    <string name="format_kg">%1$skg</string>
    <string name="format_lbs">%1$slbs</string>
    <string name="feet">′</string>
    <string name="format_h">%1$sh</string>
    <string name="format_float_1">%1$.1f</string>
    <string name="turn_bluetooth_first">Please turn on Bluetooth first!</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="set_time">Time</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="app_version">App Version</string>
    <string name="device_type">设备类型</string>
    <string name="wei_exam_setting">体重秤设置</string>
    <string name="bmi_value">BMI %.1f 偏胖</string>
    <string name="medicine">Medicine</string>
    <string name="drink">Drink</string>
    <string name="clock">Clock</string>
    <string name="inch">inch</string>
    <string name="location_permission">You will not be able to use Bluetooth if you do not have permission for the local access.</string>
    <string name="sms_permission">You will not be able to use the sms reminder if you do not have permission to access the sms!</string>
    <string name="phone_permission">You will not be able to use the phone reminder if you do not have permission to access the phone state!</string>
    <string name="storage_permission">You will not be able to write or read data if you do not have permission to access the storage!</string>
    <string name="camera_permission">"You will not be able to use the camera if you do not have permission to access the camera!"</string>
    <string name="ble_hint">Need location permission and open the location service (Not to get any location information) when using ble devices, otherwise it will not be able to scan the device or connect the device!</string>
    <string name="open_bluetooth_first">Please turn on bluetooth first!</string>
    <string name="open_location_service_first">Please turn on location service first, otherwise it may be not able to scan for blutooth device!</string>
    <string name="application_keep_running">Application keep running</string>
    <string name="sdcard_unavailable">SD Card is unavailable!</string>
    <string name="check_update">Check Update</string>
    <string name="ota_connecting">OTA update is connecting</string>
    <string name="ota_startsoon">OTA update will start soon!</string>
    <string name="file_is_not_exist">File is not exist!</string>
    <string name="where_device_ota_mode">Whether the device is in the OTA mode?</string>
    <string name="look_where_in_ota_mode">Had send OTA command!Please,checking the device whether is in the OTA mode.</string>
    <string name="bluetooth_switch">Bluetooth Switch</string>
    <string name="switch_method">Switch Method</string>
    <string name="switch_method_manual">Manual</string>
    <string name="close">Close</string>
    <string name="kcal">Kcal</string>
    <string name="switch_method_realtime">Real Time</string>
    <string name="switch_method_timing">Timing</string>
    <string name="calibration">Calibration</string>
    <string name="calibrating">Calibrating...</string>
    <string name="ota_update">OTA Update</string>
    <string name="ota_updating">OTA Updating</string>
    <string name="ready_to_ota">Readying to OTA update!</string>
    <string name="start_update_firmware">Start Update Firmware</string>
    <string name="is_already_in_ota_mode">Is already in the OTA mode?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="return_factory">Are you sure you want to return the device to Factory Mode?</string>
    <string name="will_lost_data">You will lose all information stored in the device!</string>
    <string name="factory_mode">Factory Mode</string>
    <string name="summary_description">Get notification of phone and then push to you Band!</string>
    <string name="accessibility_description">Active notification service in your accessibility setting. This allows BT notification to push application notification to remote device.</string>
    <string name="all_return_back">Back</string>
    <string name="all_return_back_device">Back</string>
    <string name="return_back_on_user">Back</string>
    <string name="return_back_on_version">Back</string>
    <string name="action_settings">Settings</string>
    <string name="save_success">Save success</string>
    <string name="name_isport">iSport Tracker Plus</string>
    <string name="menu_main_exit">And then press a return button to exit the application</string>
    <string name="exercise_trend1">Monday</string>
    <string name="exercise_trend2">Tuesday</string>
    <string name="exercise_trend3">Wednesday</string>
    <string name="exercise_trend4">Thursday</string>
    <string name="exercise_trend5">Friday</string>
    <string name="exercise_trend6">Saturday</string>
    <string name="exercise_trend7">Sunday</string>
    <string name="back">back</string>
    <string name="exercise_no_value">No record~</string>
    <string name="clock_title">Alarm reminder</string>
    <string name="manage_device_title">Pair with hardware</string>
    <string name="user_info_title">Personal Details</string>
    <string name="user_info_nick_title">User\'s name</string>
    <string name="user_info_image_title">Photo</string>
    <string name="complete_user_info_hint_nick_name">Choose a nickname</string>
    <string name="set_user_info_sex_title">Gender</string>
    <string name="set_user_info_birthday_title">Age</string>
    <string name="set_user_info_height_title">Height</string>
    <string name="set_user_info_weight_title">Weight</string>
    <string name="complete_user_info_default_age">30</string>
    <string name="user_info_man">Male</string>
    <string name="user_info_woman">Female</string>
    <string name="left_hand">Left hand</string>
    <string name="right_hand">Right hand</string>
    <string name="complete_user_info_default_age_unit"></string>
    <string name="complete_user_info_default_height">170</string>
    <string name="complete_user_info_default_height_unit">cm</string>
    <string name="complete_user_info_default_weight">65</string>
    <string name="complete_user_info_default_weight_unit">kg</string>
    <string name="user_info_take_photo_text">take a picture</string>
    <string name="user_info_browsing_text">Choose from the album</string>
    <string name="user_info_cancle">Cancel</string>
    <string name="user_info_done">Confirm</string>
    <string name="user_info_no_sd_card">The storage card is not found, unable to store photos！</string>
    <string name="user_info_set_age_title">Age Setting</string>
    <string name="set_target_title">Set daily goals</string>
    <string name="user_info_set_height_title">Height Setting</string>
    <string name="user_info_set_weight_title">Weight Setting</string>
    <string name="user_info_set_sex">Gender Setting</string>
    <string name="header_hint_refresh_normal"></string>
    <string name="header_hint_refresh_ready"></string>
    <string name="header_hint_refresh_loading">Synchronizing&#8230;</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="event">Affairs</string>
    <string name="EVENT"></string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="save">Save</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="ok">Determine</string>
    <string name="alarm_clock_set_successfully">alarm clock set successfully</string>
    <string name="alarm_clock_set_failed">alarm clock set failed</string>
    <string name="binding_is_fail">Paired is failed！</string>
    <string name="no_device">no device found</string>
    <string name="Successfully_deleted">Successfully deleted！</string>
    <string name="steps_day">Steps</string>
    <string name="user_information">User Info</string>
    <string name="About_us">About us</string>
    <string name="Version">Version</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>
    <string name="unbind_success">Unpair success！</string>
    <string name="connection_successful">connection successful！</string>
    <string name="setting">Setting</string>
    <string name="device">Device</string>
    <string name="confirm">Apply</string>
    <string name="Screen_Set">Screen Set</string>
    <string name="protect_screen">Screen Protect</string>
    <string name="Screen_Black">Black</string>
    <string name="Screen_White">White</string>
    <string name="protect_Color">Screen Color</string>
    <string name="hour">hour</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="hr_discard">Discard</string>
    <string name="hr_save">save</string>
    <string name="hr_cancel">cancel</string>
    <string name="auto_takephoto">auto Takephoto</string>
    <string name="switch_camera">switch Camera</string>
    <string name="start_fireware_update">Start firmware update</string>
    <string name="ota_explain">Press "update" on the app, and wait for a while as the firmware upgrade process prepares.</string>
    <string name="ota_explain_1">Your tracker will show the letters "OTA" and may shut down during the upgrade.</string>
    <string name="ota_explain_2">Your tracker will display "OTA FINISH" after the firmware upgrade has been done.</string>
    <string name="ota_explain_3">Press and hold the button on the tracker for 3 - 5 seconds to restart and finish the firmware update process.
This app will reboot after pressing the Continue button</string>
</resources>