<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" >

        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/iv_back"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/bluetooth_switch"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/switch_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:onClick="onClick"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa" />
    <TextView
        android:text="@string/switch_method"
        android:id="@+id/tv_manual_method"
        android:padding="10dp"
        android:onClick="onClick"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/switch_rg"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/shape_round_rec"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/switch_rb_1"
            android:checked="true"
            android:textColor="@color/black"
            android:text="@string/switch_method_manual"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/switch_method_realtime"
            android:id="@+id/switch_rb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/switch_method_timing"
            android:id="@+id/switch_rb_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <ListView
        android:id="@+id/bluetooth_listview"
        android:layout_width="match_parent"
        android:listSelector="@color/transparent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>