<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:background="@color/light_white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <include layout="@layout/view_back"
                 android:id="@+id/view_back"
            />
        <TextView
            android:textSize="16sp"
            android:id="@+id/menu_title"
            android:gravity="center"
            android:text="@string/ota_update"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/light_white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_fresh"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/start_fireware_update"
        android:background="@color/white"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/ota_explain"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="10dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/ota_explain_1"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="10dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/ota_explain_2"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="10dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/ota_explain_3"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>