<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/white"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/commTitleBackTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/iv_back"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/commTitleTitleTv"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/do_not_disturb"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/commTitleSaveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:textSize="13sp"
        android:layout_gravity="right|center" />


</LinearLayout>