<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/obtain_photo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hr_discard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button4"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/hr_discard"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal_15" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_hr_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button5"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/hr_save"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal_15" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button2"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/hr_cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/font_normal_15" />

</LinearLayout>